--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 
 .navbar .nav li {
   margin-top: 28px;
+  padding-bottom: 28px;
 }
 
 .navbar .nav li a {
@@ -26,6 +27,10 @@
   font-size: 14px;
   letter-spacing: 0.23px;
   padding: 9px;
+}
+
+.navbar .nav li:hover {
+  border-bottom: 5px solid #b88b58;
 }
 
 .jumbotron {
@@ -74,5 +79,128 @@
   height: 43px;
   letter-spacing: -0.3px;
   background-color: #b88b58;
+  border: 1px solid #b88b58;
+}
+
+.jumbotron .jumb .pagi {
+  margin-top: 188px;
+}
+
+.jumbotron .jumb .callme {
+  position: absolute;
+  right: 79px;
+  top: 812px;
+}
+
+.about {
+  margin-bottom: 60px;
+}
+
+.about .title_about, .about .sub_title {
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 30px;
+  margin-top: 25px;
+  letter-spacing: -0.8px;
+  text-align: center;
+}
+
+.about .sub_title {
+  margin: 0;
+  font-size: 14px;
+  color: #aeaeae;
+  font-weight: 600;
+}
+
+.about .text {
+  margin-top: 40px;
+}
+
+.about .text .text_about {
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 14px;
+  text-align: left;
+  line-height: 1.86;
+  margin-left: 14px;
+}
+
+.about .btn_about {
+  font-family: "Montserrat";
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 18px;
+  width: 194px;
+  margin-top: 28px;
+  height: 43px;
+  letter-spacing: -0.3px;
+  background-color: #b88b58;
+  border: 1px solid #b88b58;
+  margin-left: 15px;
+}
+
+.about .video {
+  padding: 0;
+  margin-top: 36px;
+}
+
+.services {
+  background-color: black;
+}
+
+.services .title_services, .services .sub_title_services {
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 30px;
+  margin-top: 55px;
+  letter-spacing: -0.8px;
+  text-align: center;
+  color: #fff;
+}
+
+.services .sub_title_services {
+  margin: 0;
+  font-size: 14px;
+  color: #aeaeae;
+  font-weight: 600;
+  letter-spacing: -0.2px;
+}
+
+.services .serv {
+  border-left: 1.5px solid #383838;
+  margin-top: 56px;
+  margin-bottom: 41px;
+  height: 199px;
+  text-align: center;
+}
+
+.services .serv .serv_title {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 18px;
+  color: #fff;
+  line-height: 24px;
+  margin-bottom: 0;
+}
+
+.services .serv .serv_sub_title {
+  font-family: "Montserrat";
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+  line-height: 19px;
+  margin-bottom: 0;
+}
+
+.services .serv .st1 {
+  margin-bottom: 12px;
+}
+
+.services .serv img {
+  margin-bottom: 22px;
+}
+
+.services .serv1 {
+  border-right: 1.5px solid #383838;
 }
 /*# sourceMappingURL=style.css.map */
