--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@ $white: #fff;
     height: 100px;
     margin-bottom: 0;
     background-color: black;
+    border-radius: 0;
     .navbar-brand {
         float:none;
     }
