--- a/sass/style.scss
+++ b/sass/style.scss
@@ -245,7 +245,9 @@ $font: "Montserrat", Helvetica;
         .img_gallery {
             padding: 15px 5px;
             &:hover {
-                visibility: visible;
+                .overlay {
+                    visibility: visible;
+                }
             }
             .overlay {
                 background-color: rgba(0, 0, 0, 0.7);
@@ -488,6 +490,7 @@ $font: "Montserrat", Helvetica;
     }
 }
 .premium {
+    padding-bottom: 41px;
     .title_premium {
         font-family: $font;
         font-weight: 700;
@@ -504,17 +507,36 @@ $font: "Montserrat", Helvetica;
         font-weight: 600;
     }
     .prem_row {
+        border-bottom: 1px solid #373737;
+        padding-bottom: 27px;
         .box {
             margin-top: 29px;
             img {
                 margin-left: 15px;
             }
         }
-        .prem_title {
+       .prem_title {
             font-family: $font;
             font-weight: 700;
             font-size: 21px;
-            margin-top: 41px;
+            margin-top: 71px;
+            &:before {
+                content: "";
+                width: 36px;
+                height: 32px;
+                background-image: url(../images/icon-premium.png);
+                background-size: cover;
+                position: absolute;
+                left: -51px;
+            }
+        }
+        .prem_title2 {
+            @extend .prem_title;
+            margin-top: 32px;
+        }
+        .prem_title3 {
+            @extend .prem_title;
+            margin-top: 24px;
         }
         .prem_sub_title {
             font-family: $font;
@@ -522,5 +544,156 @@ $font: "Montserrat", Helvetica;
             font-size: 14px;
             color: #aeaeae;
         }
+        .feature {
+            padding: 0;
+            line-height: 1.7;
+            li {
+                @extend .prem_sub_title;
+                list-style-type: none;
+            }
+        }
+    }
+    .btn_prem{
+        font-family: $font;
+        font-size: 12px;
+        font-weight: 700;
+        border-radius: 18px;
+        width: 194px;
+        margin-top: 28px;
+        height: 43px;
+        letter-spacing: -0.3px;
+        background-color: #b88b58;
+        border: 1px solid #b88b58;
+        margin: 17px auto;
+        &:hover {
+            background-color: #373737;
+            border: 1px solid #373737;
+        }
+    }
+    .paginator2 {
+        text-align: center;
+        margin-top: 33px;
+        margin-bottom: 42px;
+    }
+}
+.facts {
+    background-color: black;
+    padding-bottom: 27px;
+    .title_facts {
+        font-family: $font;
+        font-weight: 700;
+        font-size: 30px;
+        margin-top: 55px;
+        letter-spacing: -0.8px;
+        text-align: center;
+        color: $white;
+    }
+    .sub_title_facts {
+        @extend .title_facts;
+        margin: 0;
+        font-size: 14px;
+        color: #aeaeae;
+        font-weight: 600;
+        letter-spacing: -0.2px;
+    }
+    .fac {
+        margin-top: 27px;
+        margin-bottom: 41px;
+        height: 199px;
+        text-align: center;
+        .fac_main_title {
+            font-family: $font;
+            font-weight: 700;
+            font-size: 48px;
+            color: #b88b58;
+            &:after {
+                content: "_";
+                color: #7e7e7e;
+                display: inline-block;
+                position: absolute;
+                top: 39px;
+                left: 131px;
+            }
+        }
+        .fac_title {
+            font-family: $font;
+            font-weight: 600;
+            font-size: 18px;
+            color: $white;
+            line-height: 24px;
+            margin-bottom: 0;
+        }
+        .fac_sub_title {
+            font-family: $font;
+            font-weight: 300;
+            font-size: 12px;
+            color: $white;
+            line-height: 19px;
+            margin-top: 11px;
+            margin-bottom: 0;
+        }
+        .fac_sub_title2 {
+            @extend .fac_sub_title;
+            margin-top: 35px;
+        }
+        .st1 {
+            margin-bottom: 12px;
+        }
+    }
+}
+.social_icon {
+    padding: 20px;
+    text-align: center;
+    margin-left: 78px;
+    img {
+        margin-right: 10px;
+    }
+    .main_social {
+        display: inline-flex;
+        border-radius: 50%;
+        background-color: #34c5f0;
+        width: 33px;
+        height: 33px;
+        margin: 3px; 
+        margin-right: 53px;
+        &:hover {
+            background-color: black;
+        }
+        .after_i {
+            font-family: $font;
+            font-weight: 700;
+            font-size: 10px;
+            color: #aeaeae;
+            margin-left: 14px;
+            margin-top: 9px;
+        }
+        i {
+            font-size: 1.3em;
+            margin-top: 8px;
+            margin-left: 9px;
+            color: $white;
+        }
+        .fa-facebook {
+            margin-left: 11px;
+        }
+        .fa-google-plus {
+            margin-left: 6px;
+        }
+    }
+    .main_social2 {
+        @extend .main_social;
+        background-color: #127cb4;
+    }
+    .main_social3 {
+        @extend .main_social;
+        background-color: #336297;
+    }
+    .main_social4 {
+        @extend .main_social;
+        background-color: #e74237;
+    }
+    .main_social5 {
+        @extend .main_social;
+        background-color: #b71c29;
     }
 }
