--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+.about .title_about, .projects .title_projects, .clients .title_clients, .price .title_price, .premium .title_premium, .contact .title_contact, .contact .form-group .form {
+  font-family: "Montserrat", Helvetica;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+}
+
+.about .sub_title, .services .sub_title_services, .projects .sub_title_projects, .team .sub_title_team, .clients .sub_title_clients, .price .sub_title_price, .premium .sub_title_premium, .facts .sub_title_facts, .contact .sub_title_contact {
+  font-size: 14px;
+  color: #aeaeae;
+  font-weight: 600;
+  text-align: center;
+}
+
+.services .title_services, .team .title_team, .facts .title_facts {
+  font-family: "Montserrat", Helvetica;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  color: #fff;
+}
+
 .navbar {
   height: 100px;
   margin-bottom: 0;
@@ -105,20 +127,13 @@
   padding-top: 30px;
 }
 
-.about .title_about, .about .sub_title {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.about .title_about {
   margin-top: 25px;
   letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .about .sub_title {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
 }
 
 .about .text {
@@ -162,21 +177,13 @@
   background-color: black;
 }
 
-.services .title_services, .services .sub_title_services {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.services .title_services {
   margin-top: 55px;
   letter-spacing: -0.8px;
-  text-align: center;
-  color: #fff;
 }
 
 .services .sub_title_services {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
   letter-spacing: -0.2px;
 }
 
@@ -223,20 +230,13 @@
   padding-bottom: 39px;
 }
 
-.projects .title_projects, .projects .sub_title_projects {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.projects .title_projects {
   margin-top: 58px;
   letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .projects .sub_title_projects {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
 }
 
 .projects .gallery_nav {
@@ -330,21 +330,13 @@
   background-position: center 0;
 }
 
-.team .title_team, .team .sub_title_team {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.team .title_team {
   margin-top: 58px;
   letter-spacing: -0.8px;
-  text-align: center;
-  color: #fff;
 }
 
 .team .sub_title_team {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
 }
 
 .team .memrow {
@@ -412,20 +404,13 @@
   background-color: #f7f7f7;
 }
 
-.clients .title_clients, .clients .sub_title_clients {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.clients .title_clients {
   margin-top: 58px;
   letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .clients .sub_title_clients {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
 }
 
 .clients .cli_title {
@@ -480,20 +465,13 @@
   padding-bottom: 48px;
 }
 
-.price .title_price, .price .sub_title_price {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.price .title_price {
   margin-top: 58px;
   letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .price .sub_title_price {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
 }
 
 .price .pro_row {
@@ -560,20 +538,13 @@
   padding-bottom: 41px;
 }
 
-.premium .title_premium, .premium .sub_title_premium {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.premium .title_premium {
   margin-top: 58px;
   letter-spacing: -0.8px;
-  text-align: center;
 }
 
 .premium .sub_title_premium {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
 }
 
 .premium .prem_row {
@@ -660,21 +631,13 @@
   padding-bottom: 27px;
 }
 
-.facts .title_facts, .facts .sub_title_facts {
-  font-family: "Montserrat", Helvetica;
-  font-weight: 700;
-  font-size: 30px;
+.facts .title_facts {
   margin-top: 55px;
   letter-spacing: -0.8px;
-  text-align: center;
-  color: #fff;
 }
 
 .facts .sub_title_facts {
   margin: 0;
-  font-size: 14px;
-  color: #aeaeae;
-  font-weight: 600;
   letter-spacing: -0.2px;
 }
 
@@ -730,8 +693,9 @@
 
 .social_icon {
   padding: 20px;
+  padding-bottom: 16px;
   text-align: center;
-  margin-left: 78px;
+  border-bottom: 1px solid #cfcfcf;
 }
 
 .social_icon img {
@@ -791,5 +755,109 @@
 
 .social_icon .main_social5 {
   background-color: #b71c29;
+}
+
+.contact {
+  text-align: center;
+  background-color: #f7f7f7;
+}
+
+.contact .title_contact {
+  margin-top: 58px;
+}
+
+.contact .form-group {
+  text-align: center;
+}
+
+.contact .form-group .form {
+  border: 0;
+  border-bottom: 3px solid #cfcfcf;
+  outline: none;
+  font-size: 13px;
+  font-weight: 400;
+  text-align: left;
+  padding-bottom: 10px;
+  background-color: #f7f7f7;
+}
+
+.contact .form-group #subject {
+  width: 540px;
+  margin-top: 27px;
+}
+
+.contact .form-group #name {
+  margin-right: 31px;
+  width: 249px;
+}
+
+.contact .form-group #email {
+  width: 259px;
+}
+
+.contact .form-group #message {
+  margin-top: 67px;
+  width: 540px;
+}
+
+.contact .name {
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0 auto;
+  margin-top: 73px;
+}
+
+.contact .btn_contact {
+  font-family: "Montserrat", Helvetica;
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 18px;
+  width: 194px;
+  height: 43px;
+  letter-spacing: -0.3px;
+  background-color: #b88b58;
+  border: 1px solid #b88b58;
+  margin: 38px auto;
+}
+
+.contact .btn_contact:hover {
+  background-color: #373737;
+  border: 1px solid #373737;
+}
+
+.contact .map {
+  margin-top: 39px;
+  width: 100%;
+}
+
+.footer {
+  height: 260px;
+  background-color: black;
+}
+
+.footer .social2 {
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-right: 2px;
+  margin-top: 17px;
+}
+
+.footer .social2 .main_social2 {
+  border-radius: 50%;
+  background-color: #bebebe;
+  width: 33px;
+  height: 33px;
+  margin: 3px;
+}
+
+.footer .social2 .main_social2:hover {
+  background-color: #b88b58;
+}
+
+.footer .social2 i {
+  font-size: 1.3em;
+  margin-top: 8px;
+  margin-right: 3px;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
