--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,24 @@
 $white: #fff;
 $font: "Montserrat", Helvetica;
+%title_black {
+    font-family: $font;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+}
+%sub_title {
+    font-size: 14px;
+    color: #aeaeae;
+    font-weight: 600;
+    text-align: center;
+}
+%title_white {
+    font-family: $font;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    color: $white;
+}
 .navbar {
     height: 100px;
     margin-bottom: 0;
@@ -94,19 +113,13 @@ $font: "Montserrat", Helvetica;
     padding-bottom: 60px;
     padding-top: 30px;
     .title_about {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_black;
         margin-top: 25px;
         letter-spacing: -0.8px;
-        text-align: center;
     }
     .sub_title {
-        @extend .title_about;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
     }
     .text {
         margin-top: 40px;
@@ -144,20 +157,13 @@ $font: "Montserrat", Helvetica;
 .services {
     background-color: black;
     .title_services {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_white;
         margin-top: 55px;
         letter-spacing: -0.8px;
-        text-align: center;
-        color: $white;
     }
     .sub_title_services {
-        @extend .title_services;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
         letter-spacing: -0.2px;
     }
     .serv {
@@ -197,19 +203,13 @@ $font: "Montserrat", Helvetica;
     background-color: #f7f7f7;
     padding-bottom: 39px;
     .title_projects {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_black;
         margin-top: 58px;
         letter-spacing: -0.8px;
-        text-align: center;
     }
     .sub_title_projects {
-        @extend .title_projects;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
     }
     .gallery_nav {
         display: block;
@@ -292,20 +292,13 @@ $font: "Montserrat", Helvetica;
     background-size: cover;
     background-position: center 0;
     .title_team {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_white;
         margin-top: 58px;
         letter-spacing: -0.8px;
-        text-align: center;
-        color: $white;
     }
     .sub_title_team {
-        @extend .title_team;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
     }
     .memrow {
         margin-top: 37px;
@@ -361,19 +354,13 @@ $font: "Montserrat", Helvetica;
 .clients {
     background-color: #f7f7f7;
     .title_clients {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_black;
         margin-top: 58px;
         letter-spacing: -0.8px;
-        text-align: center;
     }
     .sub_title_clients {
-        @extend .title_clients;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
     }
     .cli_title {
         font-family: $font;
@@ -420,19 +407,13 @@ $font: "Montserrat", Helvetica;
     border-bottom: 1px solid #cfcfcf;
     padding-bottom: 48px;
     .title_price {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_black;
         margin-top: 58px;
         letter-spacing: -0.8px;
-        text-align: center;
     }
     .sub_title_price {
-        @extend .title_price;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
     }
     .pro_row {
         margin-left: 0;
@@ -492,19 +473,13 @@ $font: "Montserrat", Helvetica;
 .premium {
     padding-bottom: 41px;
     .title_premium {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_black;
         margin-top: 58px;
         letter-spacing: -0.8px;
-        text-align: center;
     }
     .sub_title_premium {
-        @extend .title_premium;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
     }
     .prem_row {
         border-bottom: 1px solid #373737;
@@ -580,20 +555,13 @@ $font: "Montserrat", Helvetica;
     background-color: black;
     padding-bottom: 27px;
     .title_facts {
-        font-family: $font;
-        font-weight: 700;
-        font-size: 30px;
+        @extend %title_white;
         margin-top: 55px;
         letter-spacing: -0.8px;
-        text-align: center;
-        color: $white;
     }
     .sub_title_facts {
-        @extend .title_facts;
+        @extend %sub_title;
         margin: 0;
-        font-size: 14px;
-        color: #aeaeae;
-        font-weight: 600;
         letter-spacing: -0.2px;
     }
     .fac {
@@ -643,8 +611,9 @@ $font: "Montserrat", Helvetica;
 }
 .social_icon {
     padding: 20px;
+    padding-bottom: 16px;
     text-align: center;
-    margin-left: 78px;
+    border-bottom: 1px solid #cfcfcf;
     img {
         margin-right: 10px;
     }
@@ -695,5 +664,96 @@ $font: "Montserrat", Helvetica;
     .main_social5 {
         @extend .main_social;
         background-color: #b71c29;
+    }
+}
+.contact {
+    text-align: center;
+    background-color: #f7f7f7;
+    .title_contact {
+        @extend %title_black;
+        margin-top: 58px;
+    }
+    .sub_title_contact {
+        @extend %sub_title;
+    }
+    .form-group {
+        text-align: center;
+        .form {
+        @extend %title_black;
+        border: 0;
+        border-bottom: 3px solid #cfcfcf;;
+        outline: none;
+        font-size: 13px;
+        font-weight: 400;
+        text-align: left;
+        padding-bottom: 10px;
+        background-color: #f7f7f7;
+        }
+        #subject {
+            width: 540px;
+            margin-top: 27px;
+        }
+        #name {
+            margin-right: 31px;
+            width: 249px;
+        }
+        #email {
+            width: 259px;
+        }
+        #message {
+            margin-top: 67px;
+            width: 540px;
+        }
+    }
+    .name {
+        display: inline-flex;
+        margin: 0 auto;
+        margin-top: 73px;
+    }
+    .btn_contact{
+        font-family: $font;
+        font-size: 12px;
+        font-weight: 700;
+        border-radius: 18px;
+        width: 194px;
+        height: 43px;
+        letter-spacing: -0.3px;
+        background-color: #b88b58;
+        border: 1px solid #b88b58;
+        margin: 38px auto;
+        &:hover {
+            background-color: #373737;
+            border: 1px solid #373737;
+        }
+    }
+    .map {
+        margin-top: 39px;
+        width: 100%;
+    }
+
+}
+.footer {
+    height: 260px;
+    background-color: black;
+    .social2 {
+        display: inline-flex;
+        margin-right: 2px;
+        margin-top: 17px;
+        .main_social2 {
+            border-radius: 50%;
+            background-color: #bebebe;
+            width: 33px;
+            height: 33px;
+            margin: 3px;
+            &:hover {
+                background-color: #b88b58;
+            }
+        }
+        i {
+            font-size: 1.3em;
+            margin-top: 8px;
+            margin-right: 3px;
+            color: $white;
+        }
     }
 }
