--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.about .title_about, .projects .title_projects, .clients .title_clients, .price .title_price, .premium .title_premium, .contact .title_contact, .contact .form-group .form {
+.about .title_about, .projects .title_projects, .clients .title_clients, .price .title_price, .premium .title_premium, .contact .title_contact, .contact .form-group .form, .footer .sub .form-group .form {
   font-family: "Montserrat", Helvetica;
   font-weight: 700;
   font-size: 30px;
@@ -6,6 +6,7 @@
 }
 
 .about .sub_title, .services .sub_title_services, .projects .sub_title_projects, .team .sub_title_team, .clients .sub_title_clients, .price .sub_title_price, .premium .sub_title_premium, .facts .sub_title_facts, .contact .sub_title_contact {
+  font-family: "Montserrat", Helvetica;
   font-size: 14px;
   color: #aeaeae;
   font-weight: 600;
@@ -828,6 +829,7 @@
 .contact .map {
   margin-top: 39px;
   width: 100%;
+  max-height: 417px;
 }
 
 .footer {
@@ -835,16 +837,23 @@
   background-color: black;
 }
 
+.footer .copyright {
+  color: #fff;
+  font-family: "Montserrat", Helvetica;
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 135px;
+}
+
 .footer .social2 {
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin-right: 2px;
-  margin-top: 17px;
+  margin-top: 26px;
 }
 
 .footer .social2 .main_social2 {
   border-radius: 50%;
-  background-color: #bebebe;
+  background-color: #373737;
   width: 33px;
   height: 33px;
   margin: 3px;
@@ -857,7 +866,57 @@
 .footer .social2 i {
   font-size: 1.3em;
   margin-top: 8px;
-  margin-right: 3px;
+  margin-left: 8px;
   color: #fff;
+}
+
+.footer .footer_text {
+  color: #7e7e7e;
+  font-family: "Montserrat", Helvetica;
+  font-size: 12px;
+  font-weight: 300;
+  margin-top: 33px;
+  line-height: 1.6;
+}
+
+.footer .sub {
+  background-color: #373737;
+  margin-top: 33px;
+  padding: 22px;
+  border-radius: 2px;
+}
+
+.footer .sub .form-group {
+  text-align: center;
+}
+
+.footer .sub .form-group .form {
+  border: 0;
+  border-bottom: 3px solid #cfcfcf;
+  outline: none;
+  font-size: 13px;
+  font-weight: 400;
+  text-align: center;
+  padding-bottom: 10px;
+  background-color: #373737;
+  margin-top: 25px;
+}
+
+.footer .sub .btn_footer {
+  font-family: "Montserrat", Helvetica;
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 18px;
+  width: 194px;
+  height: 43px;
+  letter-spacing: -0.3px;
+  background-color: #b88b58;
+  border: 1px solid #b88b58;
+  margin: 28px auto;
+}
+
+.footer .sub .btn_footer:hover {
+  background-color: #373737;
+  border: 1px solid #373737;
 }
 /*# sourceMappingURL=style.css.map */
