--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@ $font: "Montserrat", Helvetica;
     text-align: center;
 }
 %sub_title {
+    font-family: $font;
     font-size: 14px;
     color: #aeaeae;
     font-weight: 600;
@@ -729,19 +730,26 @@ $font: "Montserrat", Helvetica;
     .map {
         margin-top: 39px;
         width: 100%;
+        max-height: 417px;
     }
 
 }
 .footer {
     height: 260px;
     background-color: black;
+    .copyright {
+        color: $white;
+        font-family: $font;
+        font-size: 14px;
+        font-weight: 400;
+        margin-top: 135px;
+    }
     .social2 {
         display: inline-flex;
-        margin-right: 2px;
-        margin-top: 17px;
+        margin-top: 26px;
         .main_social2 {
             border-radius: 50%;
-            background-color: #bebebe;
+            background-color: #373737;
             width: 33px;
             height: 33px;
             margin: 3px;
@@ -752,8 +760,53 @@ $font: "Montserrat", Helvetica;
         i {
             font-size: 1.3em;
             margin-top: 8px;
-            margin-right: 3px;
+            margin-left: 8px;
             color: $white;
+        }
+    }
+    .footer_text {
+        color: #7e7e7e;
+        font-family: $font;
+        font-size: 12px;
+        font-weight: 300;
+        margin-top: 33px;
+        line-height: 1.6;
+    }
+    .sub {
+        background-color: #373737;
+        margin-top: 33px;
+        padding: 22px;
+        border-radius: 2px;
+        .form-group {
+            text-align: center;
+            .form {
+            @extend %title_black;
+            border: 0;
+            border-bottom: 3px solid #cfcfcf;;
+            outline: none;
+            font-size: 13px;
+            font-weight: 400;
+            text-align: center;
+            padding-bottom: 10px;
+            background-color: #373737;
+            margin-top: 25px;
+            }
+        }
+        .btn_footer{
+            font-family: $font;
+            font-size: 12px;
+            font-weight: 700;
+            border-radius: 18px;
+            width: 194px;
+            height: 43px;
+            letter-spacing: -0.3px;
+            background-color: #b88b58;
+            border: 1px solid #b88b58;
+            margin: 28px auto;
+            &:hover {
+                background-color: #373737;
+                border: 1px solid #373737;
+            }
         }
     }
 }
