--- a/sass/style.scss
+++ b/sass/style.scss
@@ -304,7 +304,7 @@ $font: "Montserrat", Helvetica;
     .memrow {
         margin-top: 37px;
         margin-left: 3px;
-        .member{
+        .member {
         width: 350px;
         height: 432px;
         background-color: $white;
@@ -825,11 +825,18 @@ $font: "Montserrat", Helvetica;
 
         }
     }
+    .row {
+        margin-top: initial;
+        margin-left: initial;
+        margin-right: initial;
+    }
     .team {
         .memrow {
+            margin-top: initial;
+            margin-right: initial;
             .member {
                 width: 100%;
-                margin: 10px;
+                margin: 10px 0;
             }
         }
     }
@@ -843,6 +850,15 @@ $font: "Montserrat", Helvetica;
     .footer {
         .footer_text {
             margin-top: 16px;
+        }
+    }
+    .facts {
+        .fac { 
+            .fac_main_title {
+                &:after {
+                    left: 106px;
+                }
+            }
         }
     }
 }
@@ -882,6 +898,12 @@ $font: "Montserrat", Helvetica;
     .services{
         .serv {
             border: none;
+            margin-top: 31px;
+            margin-bottom: 25px;
+            .serv_sub_title {
+                margin-top: 10px;
+                font-size: 14px;
+            }
         }
     }
     .projects {
@@ -917,7 +939,69 @@ $font: "Montserrat", Helvetica;
         }
         .prem_title {
             &:before {
-                left: 220px;
+                display: none;
+            }
+        }
+    }
+    .facts {
+        .fac { 
+            .fac_main_title {
+                &:after {
+                    display: none;
+                }
+            }
+        }
+    }
+    .footer {
+        text-align: center;
+        height: initial;
+        padding-bottom: 30px;
+        .footer_text {
+            font-size: 13px;
+            font-weight: 400;
+        }
+    }
+    .navbar-header {
+        float: initial;
+    }
+    .navbar {
+        text-align: center;
+        height: 110px;
+        .nav li {
+            margin-top: 0;
+            a {
+                font-size: 12px;
+            }
+        }
+        .container-fluid {
+            margin: 0;
+        }
+    }
+    .navbar-brand {
+        img {
+            display: initial;
+            padding: 10px;
+        }
+    }
+    .pull-right {
+        float: none!important;
+    }
+    .navbar-collapse {
+        padding: 0;
+    }
+}
+@media (max-width: 768px) {
+    .jumbotron {
+        .jumb {
+            .welcome {
+                font-size: 3em;
+            }
+        }
+    }
+    .projects {
+        .gallery_nav { 
+            .gallery_ul li {
+                padding: 7px;
             }
         }
     }
